QmlCompiler: Error out on unstorable types

We already do this for return types, but it's fatal on any type.

Fixes: QTBUG-135342
Change-Id: I7aee2a19ffcd39d2707eceb34b5073057d8b5ebb
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 0bd329a0b42b4c8c3bf77c201f3d8b187467ef02)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>